--- a/index.html
+++ b/index.html
@@ -5,29 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вчусь HTML та CSS</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>learn tables/practice</title>
 </head>
 
 <body>
     <header>
-        <a href="#">
-            <span>Web</span>
-            <span>Studio!</span>
-        </a>
-        <nav>
-            <ul>
-                <li>Студия</li>
-                <li>Портфолио</li>
-                <li>Контакты</li>
-            </ul>
-        </nav>
-        <a href="mailto:info@devstudio.com ">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-
     </header>
     <main>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <table>
+            <tr>
+                <td>Номер</td>
+                <td>Маршрут</td>
+                <td>Час в дорозі</td>
+            </tr>
+            <tr>
+                <td>433</td>
+                <td>Київ - Ковель</td>
+                <td>5 годин</td>
+            </tr>
+            <tr>
+                <td>701</td>
+                <td>Харків - Дніпро</td>
+                <td>7 годин</td>
+            </tr>
+            <tr>
+                <td>258</td>
+                <td>Львів - Одеса</td>
+                <td>4 години</td>
+            </tr>
+        </table>
+
     </main>
     <footer>
 
