--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
     </header>
     <main>
         <table>
-            <tr>
-                <td>Номер</td>
-                <td>Маршрут</td>
-                <td>Час в дорозі</td>
-            </tr>
-            <tr>
-                <td>433</td>
-                <td>Київ - Ковель</td>
-                <td>5 годин</td>
-            </tr>
-            <tr>
-                <td>701</td>
-                <td>Харків - Дніпро</td>
-                <td>7 годин</td>
-            </tr>
-            <tr>
-                <td>258</td>
-                <td>Львів - Одеса</td>
-                <td>4 години</td>
-            </tr>
+            <thead>
+                <tr>
+                    <td>Номер</td>
+                    <td>Маршрут</td>
+                    <td>Час в дорозі</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>433</td>
+                    <td>Київ - Ковель</td>
+                    <td>5 годин</td>
+                </tr>
+                <tr>
+                    <td>701</td>
+                    <td>Харків - Дніпро</td>
+                    <td>7 годин</td>
+                </tr>
+                <tr>
+                    <td>258</td>
+                    <td>Львів - Одеса</td>
+                    <td>4 години</td>
+                </tr>
+            </tbody>
         </table>
 
     </main>
