--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </header>
     <main>
         <table>
+            <caption>Розклад потягів</caption>
             <thead>
                 <tr>
                     <td>Номер</td>
