learn td-atributes rowspan & colspan

--- a/index.html
+++ b/index.html
@@ -41,6 +41,36 @@
             </tbody>
         </table>
 
+        <table>
+            <thead>
+                <tr>
+                    <td rowspan="2">Cloud service</td>
+                    <td colspan="3">Statistics</td>
+
+                </tr>
+                <tr>
+
+                    <td>Users</td>
+                    <td>Visits</td>
+                    <td>Volume</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Google</td>
+                    <td>12000</td>
+                    <td>307000</td>
+                    <td>1000Tb</td>
+                </tr>
+                <tr>
+                    <td>Amazon</td>
+                    <td>9000</td>
+                    <td>200500</td>
+                    <td>800Tb</td>
+                </tr>
+            </tbody>
+        </table>
+
     </main>
     <footer>
 
