child selector css

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Homework-01</title>
+    <title>Teach css</title>
 </head>
-
+<!-- 
 <body>
 
     <iframe width="560" height="315"
@@ -115,6 +115,33 @@
         </address>
     </footer>
 
-</body>
+</body> -->
+
+<ul class="menu">
+    <li>
+        Комп'ютери та комплектуючі
+        <ul class="submenu">
+            <li>Процесори</li>
+            <li>Монітори</li>
+            <li>Відеокарти</li>
+        </ul>
+    </li>
+    <li>
+        Побутова техніка
+        <ul class="submenu">
+            <li>Холодильники</li>
+            <li>Телевізори</li>
+            <li>Пральні машини</li>
+        </ul>
+    </li>
+    <li>
+        Побутові товари
+        <ul class="submenu">
+            <li>Кресла</li>
+            <li>Матраси</li>
+            <li>Електрокаміни </li>
+        </ul>
+    </li>
+</ul>
 
 </html>
