element, attribute,value

--- a/index.html
+++ b/index.html
@@ -117,31 +117,15 @@
 
 </body> -->
 
-<ul class="menu">
-    <li>
-        Комп'ютери та комплектуючі
-        <ul class="submenu">
-            <li>Процесори</li>
-            <li>Монітори</li>
-            <li>Відеокарти</li>
-        </ul>
-    </li>
-    <li>
-        Побутова техніка
-        <ul class="submenu">
-            <li>Холодильники</li>
-            <li>Телевізори</li>
-            <li>Пральні машини</li>
-        </ul>
-    </li>
-    <li>
-        Побутові товари
-        <ul class="submenu">
-            <li>Кресла</li>
-            <li>Матраси</li>
-            <li>Електрокаміни </li>
-        </ul>
-    </li>
-</ul>
+<!-- cелектор атрибута -->
+<a href="https://htmlreference.io" title="Справочник тегов">
+    htmlreference.io
+</a>
+
+<a href="https://cssreference.io" title="Справочник стилей">
+    cssreference.io
+</a>
+
+<a href="https://www.youtube.com">YouTube </a>
 
 </html>
