--- a/index.html
+++ b/index.html
@@ -115,17 +115,21 @@
         </address>
     </footer>
 
-</body> -->
+</body> 
 
-<!-- cелектор атрибута -->
-<a href="https://htmlreference.io" title="Справочник тегов">
-    htmlreference.io
-</a>
 
-<a href="https://cssreference.io" title="Справочник стилей">
-    cssreference.io
-</a>
+ <!-- Pseudo-classes  -->
+<!-- :hover -->
+<!-- <p>
+    Чудову шпаргалку по тегам можна знайти на 
+    <a class="link" href="https://htmlreference.io">по ссылке</a>.
+</p> -->
 
-<a href="https://www.youtube.com">YouTube </a>
+<ul class="social-links">
+    <li><a class="link" href="https://twitter.com">Twitter</a></li>
+    <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
+    <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
+</ul>
+
 
 </html>
