--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Teach css</title>
 </head>
-<!-- 
-<body>
 
+<body>
+    <!-- 
     <iframe width="560" height="315"
         src="http://fecore.net.ua/html-css/v1/docs/lesson-01/sectioning/#%D1%82%D0%B5%D0%B3-article"
         title="YouTube video player" frameborder="0"
@@ -113,23 +113,21 @@
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
-    </footer>
+    </footer> -->
 
-</body> 
+</body>
 
 
- <!-- Pseudo-classes  -->
-<!-- :hover -->
-<!-- <p>
-    Чудову шпаргалку по тегам можна знайти на 
-    <a class="link" href="https://htmlreference.io">по ссылке</a>.
-</p> -->
+<!-- Pseudo-classes  -->
+<!-- :focus Активується коли інтерактивний елемент 
+     (посилання, кнопка, поле форми) отримує 
+    фокус при навігації по сторінці  клавіатурою 
+    (клавіша Tab) -->
 
 <ul class="social-links">
     <li><a class="link" href="https://twitter.com">Twitter</a></li>
     <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
     <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
 </ul>
-
 
 </html>
