--- a/index.html
+++ b/index.html
@@ -119,15 +119,19 @@
 
 
 <!-- Pseudo-classes  -->
-<!-- :focus Активується коли інтерактивний елемент 
-     (посилання, кнопка, поле форми) отримує 
-    фокус при навігації по сторінці  клавіатурою 
-    (клавіша Tab) -->
+<!-- :active Відбувається при активації елемента. 
+    Наприклад, посилання стає активним, якщо
+     навести на нього курсор та клікнути мишкою.
+      Незважаючи на те, що активним може стати
+       практично будь-який елемент, псевдоклас 
+       :active використовується в основному для посилань
+        та кнопок.-->
 
 <ul class="social-links">
     <li><a class="link" href="https://twitter.com">Twitter</a></li>
     <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
     <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
 </ul>
+
 
 </html>
