--- a/index.html
+++ b/index.html
@@ -119,18 +119,13 @@
 
 
 <!-- Pseudo-classes  -->
-<!-- :active Відбувається при активації елемента. 
-    Наприклад, посилання стає активним, якщо
-     навести на нього курсор та клікнути мишкою.
-      Незважаючи на те, що активним може стати
-       практично будь-який елемент, псевдоклас 
-       :active використовується в основному для посилань
-        та кнопок.-->
+<!-- :visited активується на посиланнях, що вже були відвідані
+за замовчування посилання відображаються синім і при відвідуванні фіолетовим.-->
 
 <ul class="social-links">
-    <li><a class="link" href="https://twitter.com">Twitter</a></li>
-    <li><a class="link" href="https://www.instagram.com">Instagram</a></li>
-    <li><a class="link" href="https://www.facebook.com">Facebook</a></li>
+    <li><a href="https://twitter.com" class="link">Twitter</a></li>
+    <li><a href="https://www.instagram.com" class="link">Instagram</a></li>
+    <li><a href="https://www.facebook.com" class="link">Facebook</a></li>
 </ul>
 
 
