--- a/index.html
+++ b/index.html
@@ -119,14 +119,34 @@
 
 
 <!-- Pseudo-classes  -->
-<!-- :visited активується на посиланнях, що вже були відвідані
-за замовчування посилання відображаються синім і при відвідуванні фіолетовим.-->
+<!-- :hover in tables -->
 
-<ul class="social-links">
-    <li><a href="https://twitter.com" class="link">Twitter</a></li>
-    <li><a href="https://www.instagram.com" class="link">Instagram</a></li>
-    <li><a href="https://www.facebook.com" class="link">Facebook</a></li>
-</ul>
+<table class="schedule">
+    <thead>
+        <tr>
+            <th>Номер</th>
+            <th>Маршрут</th>
+            <th>Время в пути</th>
+        </tr>
+    </thead>
 
+    <tbody class="schedule-body">
+        <tr>
+            <td>433</td>
+            <td>Киев - Ковель</td>
+            <td>5 часов</td>
+        </tr>
+        <tr>
+            <td>701</td>
+            <td>Харьков - Днепр</td>
+            <td>7 часов</td>
+        </tr>
+        <tr>
+            <td>258</td>
+            <td>Львов - Одесса</td>
+            <td>4 часа</td>
+        </tr>
+    </tbody>
+</table>
 
 </html>
