--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 </head>
 
 <body>
-    <!-- 
-    <iframe width="560" height="315"
-        src="http://fecore.net.ua/html-css/v1/docs/lesson-01/sectioning/#%D1%82%D0%B5%D0%B3-article"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+
+
     <header>
         <nav>
             <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
                     class="logo-right">Studio</span> </a>
 
-            <ul>
+            <ul class="nav">
                 <li> <a href="#">Студія</a></li>
                 <li> <a href="#">Портфоліо</a></li>
                 <li> <a href="#">Контакти</a></li>
@@ -30,8 +26,8 @@
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+                <li><a href="tel:+380961111111" class="contacts"> +38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
             </ul>
         </address>
     </header>
@@ -113,16 +109,11 @@
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
-    </footer> -->
+    </footer>
 
 </body>
 
 
 
-<!-- variables -->
-
-<section class="section">
-    <h1 class="section-title">Section title</h1>
-</section>
 
 </html>
