--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 
 
     <main>
-        <section class="heroSection">
-            <h1>Ефективні рішення <br /> для вашого бізнесу</h1>
-            <button type="button" class="btn">Замовити послугу</button>
+        <section class="hero-section">
+            <h1 class="hero-title">Ефективні рішення <br /> для вашого бізнесу</h1>
+            <button type="button" class="hero-btn">
+                <p class="hero-btn-text">Замовити послугу</p>
+            </button>
         </section>
         <section class="benefits">
             <ul>
