--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
     <title>Teach css</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
 
-    <header>
+    <header class="page-header">
         <nav>
             <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
                     class="logo-right">Studio</span> </a>
 
-            <ul class="nav">
-                <li> <a href="#">Студія</a></li>
-                <li> <a href="#">Портфоліо</a></li>
-                <li> <a href="#">Контакти</a></li>
+            <ul class="site-nav">
+                <li> <a href="#" class="nav-link">Студія</a></li>
+                <li> <a href="#" class="nav-link">Портфоліо</a></li>
+                <li> <a href="#" class="nav-link">Контакти</a></li>
             </ul>
         </nav>
         <address>
@@ -36,9 +36,7 @@
     <main>
         <section class="hero-section">
             <h1 class="hero-title">Ефективні рішення <br /> для вашого бізнесу</h1>
-            <button type="button" class="hero-btn">
-                <p class="hero-btn-text">Замовити послугу</p>
-            </button>
+            <button type="button" class="hero-btn">Замовити послугу</button>
         </section>
         <section class="benefits">
             <ul>
