--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
                     class="logo-right">Studio</span> </a>
 
-            <ul class="site-nav">
+            <ul class="nav">
                 <li> <a href="#" class="nav-link">Студія</a></li>
                 <li> <a href="#" class="nav-link">Портфоліо</a></li>
                 <li> <a href="#" class="nav-link">Контакти</a></li>
@@ -41,28 +41,31 @@
         <section class="benefits">
             <ul>
                 <li>
-                    <h3>Увага до деталей</h3>
-                    <p>Ідейні міркування, а також початок кожноденної роботи з формування позиції.</p>
+                    <h3 class="benefits-title">Увага до деталей</h3>
+                    <p class="benefits-text">Ідейні міркування, а також початок кожноденної роботи з формування позиції.
+                    </p>
                 </li>
                 <li>
-                    <h3>Пунктуальність</h3>
-                    <p>Задача організації, особливо рамки та місце навявння кадрів тягне за собою.</p>
+                    <h3 class="benefits-title">Пунктуальність</h3>
+                    <p class="benefits-text">Задача організації, особливо рамки та місце навявння кадрів тягне за собою.
+                    </p>
                 </li>
                 <li>
-                    <h3>Планування</h3>
-                    <p>Рівним чином консультація з широким загалом в значній мірі обумовлює.</p>
+                    <h3 class="benefits-title">Планування</h3>
+                    <p class="benefits-text">Рівним чином консультація з широким загалом в значній мірі обумовлює.</p>
                 </li>
                 <li>
-                    <h3>Сучасні технології</h3>
-                    <p>Значущисть цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    <h3 class="benefits-title">Сучасні технології</h3>
+                    <p class="benefits-text">Значущисть цих проблем настільки очевидна, що реалізація планових завдань.
+                    </p>
                 </li>
 
             </ul>
 
         </section>
 
-        <section class="what-are-we-doing">
-            <h2>Чим ми займаємось</h2>
+        <section class="work">
+            <h2 class="work-title">Чим ми займаємось</h2>
             <ul>
                 <li><img src="./images/laptop.webp" alt="ноутбук" width="370" height="294"></li>
                 <li><img src="./images/palitra.webp" alt="палітра на планшеті" width="370" height="294"></li>
@@ -74,25 +77,25 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/igor.webp" alt="igor" width="270" height="260">
-                    <h3>Ігор Дем'яненко</h3>
-                    <p>Product Designer</p>
+                    <img class="staff-img" src="./images/igor.webp" alt="igor" width="270" height="260">
+                    <h3 class="staff-title">Ігор Дем'яненко</h3>
+                    <p class="staff-text">Product Designer</p>
 
                 </li>
                 <li>
-                    <img src="./images/olga.webp" alt="olga" width="270" height="260">
-                    <h3>Ольга Репіна</h3>
-                    <p>Frontend Developer</p>
+                    <img class="staff-img" src="./images/olga.webp" alt="olga" width="270" height="260">
+                    <h3 class="staff-title">Ольга Репіна</h3>
+                    <p class="staff-text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/nikolas.webp" alt="nikolas" width="270" height="260">
-                    <h3>Микола Тарасов</h3>
-                    <p>Marketing</p>
+                    <img class="staff-img" src="./images/nikolas.webp" alt="nikolas" width="270" height="260">
+                    <h3 class="staff-title">Микола Тарасов</h3>
+                    <p class="staff-text">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/michael.webp" alt="michael" width="270" height="260">
-                    <h3>Михайло Єрмаков</h3>
-                    <p>UI Designer</p>
+                    <img class="staff-img" src="./images/michael.webp" alt="michael" width="270" height="260">
+                    <h3 class="staff-title">Михайло Єрмаков</h3>
+                    <p class="staff-text">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -101,12 +104,12 @@
 
 
     <footer class="footer">
-        <a href="#" class="logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
+        <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
         <address>
-            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
-                <li><a href="mailto:info@example.com">info@example.com</a></li>
-                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
