--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teach css</title>
+    <title>Web Studio</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body class="page">
 
 
     <header class="page-header">
@@ -18,16 +18,16 @@
             <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
                     class="logo-right">Studio</span> </a>
 
-            <ul class="nav">
-                <li> <a href="#" class="nav-link">Студія</a></li>
-                <li> <a href="#" class="nav-link">Портфоліо</a></li>
+            <ul class="nav list">
+                <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
+                <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
                 <li> <a href="#" class="nav-link">Контакти</a></li>
             </ul>
         </nav>
         <address>
-            <ul>
-                <li><a href="tel:+380961111111" class="contacts"> +38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a></li>
+            <ul class="list">
+                <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
             </ul>
         </address>
     </header>
@@ -38,25 +38,29 @@
             <h1 class="hero-title">Ефективні рішення <br /> для вашого бізнесу</h1>
             <button type="button" class="hero-btn">Замовити послугу</button>
         </section>
-        <section class="benefits">
-            <ul>
+        <section class="section benefits">
+            <ul class="list">
                 <li>
-                    <h3 class="benefits-title">Увага до деталей</h3>
-                    <p class="benefits-text">Ідейні міркування, а також початок кожноденної роботи з формування позиції.
+                    <h3 class="section-title benefits-title">Увага до деталей</h3>
+                    <p class="section-text benefits-text">Ідейні міркування, а також початок кожноденної роботи з
+                        формування позиції.
                     </p>
                 </li>
                 <li>
-                    <h3 class="benefits-title">Пунктуальність</h3>
-                    <p class="benefits-text">Задача організації, особливо рамки та місце навявння кадрів тягне за собою.
+                    <h3 class="section-title benefits-title">Пунктуальність</h3>
+                    <p class="section-text benefits-text">Задача організації, особливо рамки та місце навявння кадрів
+                        тягне за собою.
                     </p>
                 </li>
                 <li>
-                    <h3 class="benefits-title">Планування</h3>
-                    <p class="benefits-text">Рівним чином консультація з широким загалом в значній мірі обумовлює.</p>
+                    <h3 class="section-title benefits-title">Планування</h3>
+                    <p class="section-text benefits-text">Рівним чином консультація з широким загалом в значній мірі
+                        обумовлює.</p>
                 </li>
                 <li>
-                    <h3 class="benefits-title">Сучасні технології</h3>
-                    <p class="benefits-text">Значущисть цих проблем настільки очевидна, що реалізація планових завдань.
+                    <h3 class="section-title benefits-title">Сучасні технології</h3>
+                    <p class="section-text benefits-text">Значущисть цих проблем настільки очевидна, що реалізація
+                        планових завдань.
                     </p>
                 </li>
 
@@ -64,38 +68,38 @@
 
         </section>
 
-        <section class="work">
-            <h2 class="work-title">Чим ми займаємось</h2>
-            <ul>
+        <section class="section work">
+            <h2 class="section-title work-title">Чим ми займаємось</h2>
+            <ul class="list">
                 <li><img src="./images/laptop.webp" alt="ноутбук" width="370" height="294"></li>
                 <li><img src="./images/palitra.webp" alt="палітра на планшеті" width="370" height="294"></li>
                 <li><img src="./images/keyboard-on-table.webp" alt="клавіатура на столі" width="370" height="294"></li>
             </ul>
         </section>
 
-        <section class="staff">
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section staff">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="list">
                 <li>
                     <img class="staff-img" src="./images/igor.webp" alt="igor" width="270" height="260">
-                    <h3 class="staff-title">Ігор Дем'яненко</h3>
-                    <p class="staff-text">Product Designer</p>
+                    <h3 class="section-title staff-subtitle">Ігор Дем'яненко</h3>
+                    <p class="section-text staff-text">Product Designer</p>
 
                 </li>
                 <li>
                     <img class="staff-img" src="./images/olga.webp" alt="olga" width="270" height="260">
-                    <h3 class="staff-title">Ольга Репіна</h3>
-                    <p class="staff-text">Frontend Developer</p>
+                    <h3 class="section-title staff-subtitle">Ольга Репіна</h3>
+                    <p class="section-text staff-text">Frontend Developer</p>
                 </li>
                 <li>
                     <img class="staff-img" src="./images/nikolas.webp" alt="nikolas" width="270" height="260">
-                    <h3 class="staff-title">Микола Тарасов</h3>
-                    <p class="staff-text">Marketing</p>
+                    <h3 class="section-title staff-subtitle">Микола Тарасов</h3>
+                    <p class="section-text staff-text">Marketing</p>
                 </li>
                 <li>
                     <img class="staff-img" src="./images/michael.webp" alt="michael" width="270" height="260">
-                    <h3 class="staff-title">Михайло Єрмаков</h3>
-                    <p class="staff-text">UI Designer</p>
+                    <h3 class="section-title staff-subtitle">Михайло Єрмаков</h3>
+                    <p class="section-text staff-text">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -107,7 +111,7 @@
         <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
         <address>
             <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul>
+            <ul class="list">
                 <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
