add main section to portfolio-page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </address>
     </header>
 
-
+    <!-- sdsd -->
     <main>
         <section class="hero-section">
             <h1 class="hero-title">Ефективні рішення <br /> для вашого бізнесу</h1>
@@ -71,9 +71,10 @@
         <section class="section work">
             <h2 class="section-title work-title">Чим ми займаємось</h2>
             <ul class="list">
-                <li><img src="./images/laptop.webp" alt="ноутбук" width="370" height="294"></li>
-                <li><img src="./images/palitra.webp" alt="палітра на планшеті" width="370" height="294"></li>
-                <li><img src="./images/keyboard-on-table.webp" alt="клавіатура на столі" width="370" height="294"></li>
+                <li><img src="./images/index/laptop.webp" alt="ноутбук" width="370" height="294"></li>
+                <li><img src="./images/index/palitra.webp" alt="палітра на планшеті" width="370" height="294"></li>
+                <li><img src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі" width="370" height="294">
+                </li>
             </ul>
         </section>
 
@@ -81,23 +82,23 @@
             <h2 class="section-title">Наша команда</h2>
             <ul class="list">
                 <li>
-                    <img class="staff-img" src="./images/igor.webp" alt="igor" width="270" height="260">
+                    <img class="staff-img" src="./images/index/igor.webp" alt="igor" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Ігор Дем'яненко</h3>
                     <p class="section-text staff-text">Product Designer</p>
 
                 </li>
                 <li>
-                    <img class="staff-img" src="./images/olga.webp" alt="olga" width="270" height="260">
+                    <img class="staff-img" src="./images/index/olga.webp" alt="olga" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Ольга Репіна</h3>
                     <p class="section-text staff-text">Frontend Developer</p>
                 </li>
                 <li>
-                    <img class="staff-img" src="./images/nikolas.webp" alt="nikolas" width="270" height="260">
+                    <img class="staff-img" src="./images/index/nikolas.webp" alt="nikolas" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Микола Тарасов</h3>
                     <p class="section-text staff-text">Marketing</p>
                 </li>
                 <li>
-                    <img class="staff-img" src="./images/michael.webp" alt="michael" width="270" height="260">
+                    <img class="staff-img" src="./images/index/michael.webp" alt="michael" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Михайло Єрмаков</h3>
                     <p class="section-text staff-text">UI Designer</p>
                 </li>
