--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,84 @@
     </header>
 
 
-    <main></main>
+    <main>
+        <section>
+            <ul class="list">
+                <li><button type="button">Всі</button></li>
+                <li><button type="button">Веб-сайти</button></li>
+                <li><button type="button">Додатки</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+            </ul>
+            <ul class="list">
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="" alt="">
+                        <h2></h2>
+                        <p></p>
+                        <p></p>
+                    </a>
+                </li>
+
+            </ul>
+        </section>
+    </main>
 
 
     <footer class="footer">
