--- a/portfolio.html
+++ b/portfolio.html
@@ -45,66 +45,66 @@
             </ul>
             <ul class="list">
                 <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href=""><img src="./images/portfolio/technocrack.webp" alt="" width="370" height="294">
+                        <h2>Технокряк</h2>
+                        <p>Веб-сайт</p>
                         <p></p>
                     </a>
                 </li>
 
                 <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href=""><img src="./images/portfolio/neworlean.webp" alt="" width="370" height="294">
+                        <h2>Постер New Orlean vs Golden Star</h2>
+                        <p>Дизайн</p>
                         <p></p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href=""><img src="./images/portfolio/seafood.webp" alt="" width="370" height="294">
+                        <h2>Ресторан Seafood</h2>
+                        <p>Застосунок</p>
                         <p></p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href=""><img src="./images/portfolio/headfones.webp" alt="" width="370" height="294">
+                        <h2>Проет Prime</h2>
+                        <p>Маркетинг</p>
                         <p></p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
-                        <p></p>
+                    <a href=""><img src="./images/portfolio/boxes.webp" alt="" width="370" height="294">
+                        <h2>Проект Boxes</h2>
+                        <p>Застосунок</p>
                         <p></p>
                     </a>
                 </li>
                 <li>
-                    <a href=""><img src="" alt="">
-                        <h2></h2>
+                    <a href=""><img src="./images/portfolio/monitor.webp"" alt="" width=" 370" height="294">
+                        <h2>Inspiration has no Borders</h2>
+                        <p>Веб-сайт</p>
                         <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/portfolio/magazine.webp" alt="" width="370" height="294">
+                        <h2>Видання Limited Edition</h2>
+                        <p>Дизайн</p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/portfolio/tag.webp" alt="" width="370" height="294">
+                        <h2>Проект LAB</h2>
+                        <p>Маркетинг</p>
+                        <p></p>
+                    </a>
+                </li>
+                <li>
+                    <a href=""><img src="./images/portfolio/growingbisiness.webp" alt="" width="370" height="294">
+                        <h2>Growing Business</h2>
+                        <p>Застосунок</p>
                         <p></p>
                     </a>
                 </li>
