--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
 
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"> -->
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -22,7 +21,7 @@
 
     <header class="page-header">
         <nav>
-            <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
+            <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
                     class="logo-right">Studio</span> </a>
 
             <ul class="nav list">
