--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
 
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css">
@@ -20,7 +19,7 @@
 
 
     <header class="page-header">
-        <nav>
+        <nav class="nav">
             <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
                     class="logo-right">Studio</span> </a>
 
@@ -30,7 +29,7 @@
                 <li> <a href="#" class="nav-link">Контакти</a></li>
             </ul>
         </nav>
-        <address>
+        <address class="address">
             <ul class="list">
                 <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
                 <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
@@ -76,34 +75,38 @@
 
         <section class="section work">
             <h2 class="section-title work-title">Чим ми займаємось</h2>
-            <ul class="list">
-                <li><img src="./images/index/laptop.webp" alt="ноутбук" width="370" height="294"></li>
-                <li><img src="./images/index/palitra.webp" alt="палітра на планшеті" width="370" height="294"></li>
-                <li><img src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі" width="370" height="294">
+            <ul class="list wraper">
+                <li class="work-item"><img class="work-img" src="./images/index/laptop.webp" alt="ноутбук" width="370"
+                        height="294"></li>
+                <li><img class="work-img" src="./images/index/palitra.webp" alt="палітра на планшеті" width="370"
+                        height="294"></li>
+                <li><img class="work-img" src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі"
+                        width="370" height="294">
                 </li>
             </ul>
         </section>
 
         <section class="section staff">
-            <h2 class="section-title">Наша команда</h2>
-            <ul class="list">
-                <li>
+            <h2 class="section-title staff-title">Наша команда</h2>
+            <ul class="list wraper">
+                <li class="staff-card">
                     <img class="staff-img" src="./images/index/igor.webp" alt="igor" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Ігор Дем'яненко</h3>
                     <p class="section-text staff-text">Product Designer</p>
 
                 </li>
-                <li>
+
+                <li class="staff-card">
                     <img class="staff-img" src="./images/index/olga.webp" alt="olga" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Ольга Репіна</h3>
                     <p class="section-text staff-text">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="staff-card">
                     <img class="staff-img" src="./images/index/nikolas.webp" alt="nikolas" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Микола Тарасов</h3>
                     <p class="section-text staff-text">Marketing</p>
                 </li>
-                <li>
+                <li class="staff-card">
                     <img class="staff-img" src="./images/index/michael.webp" alt="michael" width="270" height="260">
                     <h3 class="section-title staff-subtitle">Михайло Єрмаков</h3>
                     <p class="section-text staff-text">UI Designer</p>
