--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
 
 
     <header class="page-header">
-        <nav class="nav">
-            <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
-                    class="logo-right">Studio</span> </a>
 
-            <ul class="nav list">
-                <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
-                <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-                <li> <a href="#" class="nav-link">Контакти</a></li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="list">
-                <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <nav class="nav">
+                <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
+                        class="logo-right">Studio</span> </a>
+
+                <ul class="nav list">
+                    <li> <a href="./index.html" class="nav-link curent">Студія</a></li>
+                    <li> <a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+                    <li> <a href="#" class="nav-link">Контакти</a></li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="list">
+                    <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
     <!-- sdsd -->
     <main>
+
         <section class="hero-section">
             <h1 class="hero-title">Ефективні рішення <br /> для вашого бізнесу</h1>
             <button type="button" class="hero-btn">Замовити послугу</button>
@@ -54,7 +58,8 @@
                 </li>
                 <li>
                     <h3 class="section-title benefits-title">Пунктуальність</h3>
-                    <p class="section-text benefits-text">Задача організації, особливо рамки та місце навявння кадрів
+                    <p class="section-text benefits-text">Задача організації, особливо рамки та місце навявння
+                        кадрів
                         тягне за собою.
                     </p>
                 </li>
@@ -80,7 +85,8 @@
                 <li class="work-item"><img class="work-img" src="./images/index/laptop.webp" alt="ноутбук" width="370"
                         height="294"></li>
                 <li><img class="work-img" src="./images/index/palitra.webp" alt="палітра на планшеті" width="370"
-                        height="294"></li>
+                        height="294">
+                </li>
                 <li><img class="work-img" src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі"
                         width="370" height="294">
                 </li>
@@ -114,6 +120,7 @@
                 </li>
             </ul>
         </section>
+
 
     </main>
 
