added container class to page portfolio

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
     <header class="page-header">
 
+
         <div class="container">
-            <nav class="nav">
+            <nav class="nav container ">
                 <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
                         class="logo-right">Studio</span> </a>
 
@@ -39,6 +40,8 @@
                 </ul>
             </address>
         </div>
+
+
     </header>
 
     <!-- sdsd -->
@@ -49,76 +52,83 @@
             <button type="button" class="hero-btn">Замовити послугу</button>
         </section>
         <section class="section benefits">
-            <ul class="list">
-                <li>
-                    <h3 class="section-title benefits-title">Увага до деталей</h3>
-                    <p class="section-text benefits-text">Ідейні міркування, а також початок кожноденної роботи з
-                        формування позиції.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="section-title benefits-title">Пунктуальність</h3>
-                    <p class="section-text benefits-text">Задача організації, особливо рамки та місце навявння
-                        кадрів
-                        тягне за собою.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="section-title benefits-title">Планування</h3>
-                    <p class="section-text benefits-text">Рівним чином консультація з широким загалом в значній мірі
-                        обумовлює.</p>
-                </li>
-                <li>
-                    <h3 class="section-title benefits-title">Сучасні технології</h3>
-                    <p class="section-text benefits-text">Значущисть цих проблем настільки очевидна, що реалізація
-                        планових завдань.
-                    </p>
-                </li>
+            <div class="container">
+                <ul class="list">
+                    <li>
+                        <h3 class="section-title benefits-title">Увага до деталей</h3>
+                        <p class="section-text benefits-text">Ідейні міркування, а також початок кожноденної роботи з
+                            формування позиції.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="section-title benefits-title">Пунктуальність</h3>
+                        <p class="section-text benefits-text">Задача організації, особливо рамки та місце навявння
+                            кадрів
+                            тягне за собою.
+                        </p>
+                    </li>
+                    <li>
+                        <h3 class="section-title benefits-title">Планування</h3>
+                        <p class="section-text benefits-text">Рівним чином консультація з широким загалом в значній мірі
+                            обумовлює.</p>
+                    </li>
+                    <li>
+                        <h3 class="section-title benefits-title">Сучасні технології</h3>
+                        <p class="section-text benefits-text">Значущисть цих проблем настільки очевидна, що реалізація
+                            планових завдань.
+                        </p>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
 
         </section>
 
         <section class="section work">
-            <h2 class="section-title work-title">Чим ми займаємось</h2>
-            <ul class="list wraper">
-                <li class="work-item"><img class="work-img" src="./images/index/laptop.webp" alt="ноутбук" width="370"
-                        height="294"></li>
-                <li><img class="work-img" src="./images/index/palitra.webp" alt="палітра на планшеті" width="370"
-                        height="294">
-                </li>
-                <li><img class="work-img" src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі"
-                        width="370" height="294">
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="section-title work-title">Чим ми займаємось</h2>
+                <ul class="list wraper">
+                    <li class="work-item"><img class="work-img" src="./images/index/laptop.webp" alt="ноутбук"
+                            width="370" height="294">
+                    </li>
+                    <li><img class="work-img" src="./images/index/palitra.webp" alt="палітра на планшеті" width="370"
+                            height="294">
+                    </li>
+                    <li><img class="work-img" src="./images/index/keyboard-on-table.webp" alt="клавіатура на столі"
+                            width="370" height="294">
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section class="section staff">
-            <h2 class="section-title staff-title">Наша команда</h2>
-            <ul class="list wraper">
-                <li class="staff-card">
-                    <img class="staff-img" src="./images/index/igor.webp" alt="igor" width="270" height="260">
-                    <h3 class="section-title staff-subtitle">Ігор Дем'яненко</h3>
-                    <p class="section-text staff-text">Product Designer</p>
+            <div class="container">
+                <h2 class="section-title staff-title">Наша команда</h2>
+                <ul class="list wraper">
+                    <li class="staff-card">
+                        <img class="staff-img" src="./images/index/igor.webp" alt="igor" width="270" height="260">
+                        <h3 class="section-title staff-subtitle">Ігор Дем'яненко</h3>
+                        <p class="section-text staff-text">Product Designer</p>
 
-                </li>
+                    </li>
 
-                <li class="staff-card">
-                    <img class="staff-img" src="./images/index/olga.webp" alt="olga" width="270" height="260">
-                    <h3 class="section-title staff-subtitle">Ольга Репіна</h3>
-                    <p class="section-text staff-text">Frontend Developer</p>
-                </li>
-                <li class="staff-card">
-                    <img class="staff-img" src="./images/index/nikolas.webp" alt="nikolas" width="270" height="260">
-                    <h3 class="section-title staff-subtitle">Микола Тарасов</h3>
-                    <p class="section-text staff-text">Marketing</p>
-                </li>
-                <li class="staff-card">
-                    <img class="staff-img" src="./images/index/michael.webp" alt="michael" width="270" height="260">
-                    <h3 class="section-title staff-subtitle">Михайло Єрмаков</h3>
-                    <p class="section-text staff-text">UI Designer</p>
-                </li>
-            </ul>
+                    <li class="staff-card">
+                        <img class="staff-img" src="./images/index/olga.webp" alt="olga" width="270" height="260">
+                        <h3 class="section-title staff-subtitle">Ольга Репіна</h3>
+                        <p class="section-text staff-text">Frontend Developer</p>
+                    </li>
+                    <li class="staff-card">
+                        <img class="staff-img" src="./images/index/nikolas.webp" alt="nikolas" width="270" height="260">
+                        <h3 class="section-title staff-subtitle">Микола Тарасов</h3>
+                        <p class="section-text staff-text">Marketing</p>
+                    </li>
+                    <li class="staff-card">
+                        <img class="staff-img" src="./images/index/michael.webp" alt="michael" width="270" height="260">
+                        <h3 class="section-title staff-subtitle">Михайло Єрмаков</h3>
+                        <p class="section-text staff-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
 
@@ -126,14 +136,16 @@
 
 
     <footer class="footer">
-        <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
-        <address>
-            <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="list">
-                <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
+            <address>
+                <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
+                <ul class="list">
+                    <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
