--- a/portfolio.html
+++ b/portfolio.html
@@ -17,115 +17,121 @@
 
 <body class="page">
     <header class="page-header">
-        <nav>
-            <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
-                    class="logo-right">Studio</span>
-            </a>
+        <div class="container">
+            <nav>
+                <a href="./index.html" class="logo"> <span class="logo-left">Web</span><span
+                        class="logo-right">Studio</span>
+                </a>
 
-            <ul class="nav list">
-                <li> <a href="./index.html" class="nav-link">Студія</a></li>
-                <li> <a href="./portfolio.html" class="nav-link curent">Портфоліо</a></li>
-                <li> <a href="#" class="nav-link">Контакти</a></li>
-            </ul>
-        </nav>
-        <address>
-            <ul class="list">
-                <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
-            </ul>
-        </address>
+                <ul class="nav list">
+                    <li> <a href="./index.html" class="nav-link">Студія</a></li>
+                    <li> <a href="./portfolio.html" class="nav-link curent">Портфоліо</a></li>
+                    <li> <a href="#" class="nav-link">Контакти</a></li>
+                </ul>
+            </nav>
+            <address>
+                <ul class="list">
+                    <li><a href="tel:+380961111111" class="contacts "> +38 096 111 11 11</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="contacts ">info@devstudio.com</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
 
 
     <main>
-        <section>
-            <ul class="list">
-                <li><button type="button">Всі</button></li>
-                <li><button type="button">Веб-сайти</button></li>
-                <li><button type="button">Додатки</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
-            </ul>
-            <ul class="list">
-                <li>
-                    <a href=""><img src="./images/portfolio/technocrack.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Технокряк</h2>
-                        <p class="section-text galery-text">Веб-сайт</p>
-                        <p></p>
-                    </a>
-                </li>
+        <section class="portfolio">
+            <div class="container">
+                <ul class="list">
+                    <li><button type="button">Всі</button></li>
+                    <li><button type="button">Веб-сайти</button></li>
+                    <li><button type="button">Додатки</button></li>
+                    <li><button type="button">Дизайн</button></li>
+                    <li><button type="button">Маркетинг</button></li>
+                </ul>
+                <ul class="list">
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/technocrack.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Технокряк</h2>
+                            <p class="section-text galery-text">Веб-сайт</p>
+                            <p></p>
+                        </a>
+                    </li>
 
-                <li>
-                    <a href=""><img src="./images/portfolio/neworlean.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="section-text galery-text">Дизайн</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/seafood.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Ресторан Seafood</h2>
-                        <p class="section-text galery-text">Застосунок</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/headfones.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Проет Prime</h2>
-                        <p class="section-text galery-text">Маркетинг</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/boxes.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Проект Boxes</h2>
-                        <p class="section-text galery-text">Застосунок</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/monitor.webp" alt="" width=" 370" height="294">
-                        <h2 class="section-title galery-title">Inspiration has no Borders</h2>
-                        <p class="section-text galery-text">Веб-сайт</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/magazine.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Видання Limited Edition</h2>
-                        <p class="section-text galery-text">Дизайн</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/tag.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Проект LAB</h2>
-                        <p class="section-text galery-text">Маркетинг</p>
-                        <p></p>
-                    </a>
-                </li>
-                <li>
-                    <a href=""><img src="./images/portfolio/growingbisiness.webp" alt="" width="370" height="294">
-                        <h2 class="section-title galery-title">Growing Business</h2>
-                        <p class="section-text galery-text">Застосунок</p>
-                        <p></p>
-                    </a>
-                </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/neworlean.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="section-text galery-text">Дизайн</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/seafood.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Ресторан Seafood</h2>
+                            <p class="section-text galery-text">Застосунок</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/headfones.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Проет Prime</h2>
+                            <p class="section-text galery-text">Маркетинг</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/boxes.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Проект Boxes</h2>
+                            <p class="section-text galery-text">Застосунок</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/monitor.webp" alt="" width=" 370" height="294">
+                            <h2 class="section-title galery-title">Inspiration has no Borders</h2>
+                            <p class="section-text galery-text">Веб-сайт</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/magazine.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Видання Limited Edition</h2>
+                            <p class="section-text galery-text">Дизайн</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/tag.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Проект LAB</h2>
+                            <p class="section-text galery-text">Маркетинг</p>
+                            <p></p>
+                        </a>
+                    </li>
+                    <li class="portfolio-item">
+                        <a href=""><img src="./images/portfolio/growingbisiness.webp" alt="" width="370" height="294">
+                            <h2 class="section-title galery-title">Growing Business</h2>
+                            <p class="section-text galery-text">Застосунок</p>
+                            <p></p>
+                        </a>
+                    </li>
 
-            </ul>
+                </ul>
+            </div>
         </section>
     </main>
 
 
     <footer class="footer">
-        <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
-        <address>
-            <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="list">
-                <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="#" class="footer-logo"><span>Web</span><span class="footer-logo-right">Studio</span> </a>
+            <address>
+                <p class="footer-text">м. Київ, пр-т Лесі Українки, 26</p>
+                <ul class="list">
+                    <li><a class="footer-contacts" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="footer-contacts" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
