--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
 
     <header class="page-header">
-
-
         <div class="container">
-            <nav class="nav container ">
+            <nav class="nav ">
                 <a href="./index.html" class="logo "> <span class="logo-left">Web</span><span
                         class="logo-right">Studio</span> </a>
 
